--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  margin: 40px auto;
+  margin: 90px auto;
   width: 600px;
   text-align: center;
+  color: red;
+  background-color: #333;
 }
 
 h1 {
